[tool.poetry]
name = "pyanchorknit"
version = "0.1.0"
description = "Weaving algorithm."
license = "MIT"
readme = "README.md"
authors = ["CrossNox <ijmermet@gmail.com>"]
homepage = "https://github.com/CrossNox/pyanchorknit"
repository = "https://github.com/CrossNox/pyanchorknit"
classifiers = [
	"License :: OSI Approved :: MIT License",
	"Topic :: Artistic Software"
]

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.4.0"
opencv-python = "^4.5.3"
scikit-image = "^0.18.3"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"
flake8 = "^3.9.2"
pre-commit = "^2.15.0"
pylint = "^2.11.1"
isort = "^5.9.3"
mypy = "^0.910"

[tool.black]
line-length = 88

[tool.isort]
line_length=88
indent='    '
multi_line_output=3
length_sort=true
use_parentheses=true
include_trailing_comma=true
force_sort_within_sections=true
known_first_party="pyanchorknit"

[tool.poetry.scripts]
pyanchorknit = "pyanchorknit.cli.main:app()"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
